# privateGPT

./: ingest.py  privateGPT.py  pyproject.toml
